--- a/samples/PDFsMerge/MergePDFs.csproj
+++ b/samples/PDFsMerge/MergePDFs.csproj
@@ -37,6 +37,9 @@
       <HintPath>..\packages\NLog.4.5.11\lib\net45\NLog.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PdfSharp">
+      <HintPath>..\..\..\..\PDFsharp\PDFsharp\src\PdfSharp\bin\Debug\PdfSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
